--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "git push heroku master",
     "postdeploy": "npm run migrate:production",
     "migrate": "postgrator --config postgrator-config.js",
+    "migrate:test": "env NODE_ENV=test npm run migrate",
     "migrate:production": "heroku run npm run migrate"
   },
   "keywords": [],
